style.css
* {
	margin:0;
	padding:0;
	border:0}

body {
	background:#242833;
	font-family:'Source sans pro', helvetica, arial, sans-serif;
	font-size:1.2em;
	color:#c0c0c0;}
	
a {
	color:#41fff8;
	text-decoration:none;}
	
p a:hover, section a:hover {
	color:#000;
	background:#41fff8;
	border-bottom:3px solid #41fff8}
	
p a, section a {
	border-bottom:1px solid #444}



/* --- BANNER -------------------------------------------------------- */
header {
	background:#0b5e9b url('img/bg-gradient.png') repeat-x;
	min-height:500px;
	margin-bottom:50px;
	text-align:center;}

div#banner {
	position:relative;
	background:url('img/bg-stars.png') repeat;}
	
div#logo {
	padding:5%;
	text-align:center;
	float:left;}
	
div#details {
	float:left;
	position:relative;
	top:70px;
	left:-100px;
	width:300px;
	color:#fff;}
	
div#details div {
	border-radius:5px;
	margin-bottom:10px;
	padding:10px;
	background:#000;
	font-size:1.35em;
	font-weight:bold;}
	
div#details img, h2 img, footer img, p img {
	vertical-align:middle}
	
#mc_embed_signup input {
	font-size:1em;
	font-family:'Source sans pro', helvetica, arial, sans-serif;}
	
#mc_embed_signup input[type=email] {
	padding:5px;
	border-radius:3px;
	margin:0 10px;
	width:400px !important;
	max-width:400px;
	background:#222;
	border:1px solid #4e8381 !important;
	color:#41fff8;
	margin-bottom:10px;
	display:inline}
	
#mc_embed_signup input[type=submit] {
	padding:5px 10px;
	background:#41fff8;
	box-shadow: 0 3px 0 #000;
	border-radius:5px;
	text-transform:uppercase;
	font-weight:bold;
	text-decoration:underline;
	color:#000;
	position:relative;
	left:-48px}
	
#mc_embed_signup input[type=submit]:hover {
	cursor:pointer;
	background:#2fd8d2}
	
#mc_embed_signup label {
	color:#fff;
	font-weight:bold}
	
	
/* --- MENU --------------------------------------------------------- */
div#menu {
	background:#000;
	padding:15px 0;
	text-align:center;}
	
div#menu li {
	color:#3d3d3d;
	display:inline-block;}
	
div#menu a {
	color:#fff;
	font-size:0.8em;
	text-transform:uppercase;
	text-decoration:none;
	padding:0 15px}

	
/* --- CONTENT ------------------------------------------------------- */
div.hr {
	position:relative;
	top:10px;
	background-repeat:repeat-x;
	height:20px;
	clear:both;}
	
section {
	margin:0 auto;
	text-align:center}

p {
	margin-bottom:40px;
	line-height:1.5em}
	
div.col {
	width:40%;
	display:inline-block;
	padding:15px;
	text-align:left;
	vertical-align:top;}	

.byline {
	color:#fff;
	font-family:georgia;
	font-style:italic;}
	
h2 {
	color:#fff;
	text-transform:uppercase;
	margin-bottom:15px;}
		
.content-session {
	color:#b56efe;}
	
.content-pitch {
	color:#ec008c;}
	
.content-talk {
	color:#08bafe}
	
/* -- contact section */
section#menu-register {
	background:#32323e}

span.organizer img {
	width:80px;
	height:80px;
	border-radius:40px;
	float:left;
	margin:15px 10px}
	
span.organizer strong {
	color:#fff;
	display:block;
	padding-top:15px}

span.organizer {
	display:block;
	clear:left}
	
	
	
/* --- FOOTER ------------------------------------------------------- */

h3 {
	color:#000;
	text-align:center;
	text-transform:uppercase;
	padding:20px 0}
	
footer {
	text-align:center;
	background:#293051;
	clear:both;
	padding-bottom:50px;}
	
footer span {
	margin:10px 0;
	display:block;}
	
footer span img {
	padding:10px}

.mrgs img {
	height:150px}
	
.gold img {
	height:80px;}

.silver img {
	height:80px;}

.bronze img {
	height:45px}

